# solana-bot

./: .env.example  .env.production.example  .gitignore  .yamllint  Dockerfile  Makefile  POOLS_PREFILL.md  README.md  alerts.py  autorun_solbot.sh  bootstrap.sh  check_compose.sh  config.yaml  config_local.yaml  diag.sh  docker-compose.addons.yml  docker-compose.arm64.yml  docker-compose.build.yml  docker-compose.local.yml  docker-compose.override.yml  docker-compose.ull.yml  docker-compose.yml  fix_docker_ubuntu24.sh  hbctl.sh  install_solana.sh  oneclick.sh  preflight_guard.sh  run.sh  run_all.sh  run_local_macos.sh  run_me.sh  run_oneclick.sh  smoke.sh  systemd_solbot_all.service  systemd_solbot_panel.service  telegram_alerts.py
adapters/: auto_fetch_markets.py  common.py  drift_perp.py  idl_common.py  idl_helper.py  idl_loader.py  market_mapper.py  market_registry.yaml  metas_validator.py  meteora_dlmm.py  meteora_onchain.py  openbook.py  openbook_instr.py  phoenix.py  phoenix_instr.py  presets.yaml  programs.schema.yaml  programs.yaml  raydium_clmm.py  raydium_onchain.py  whirlpool.py  whirlpool_onchain.py  zeta_perp.py
ai/: models.py  requirements.txt  resolve_pyth_ids.py
ai_fee_bandit/: app.py
alerting/: requirements.txt  watcher.py
alerts/: telegram.py  telegram_alert.py
alerts_runner/: requirements.txt  (+1 more)
executor/: Cargo.toml
executor/jito_grpc_client/: Cargo.toml
executor/jito_grpc_client/proto/: jito.proto
executor/jito_grpc_client/src/: lib.rs
executor/src/: alert.rs  backrun.rs  main.rs  minout_enforcer.rs  risk_guard.rs  solana_exec.rs
(+453 files in other folders)
