[package]
name = "solbotpro-executor"
version = "0.6.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
redis = { version = "0.25", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
config = "0.14"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
solana-sdk = "1.18"
solana-client = "1.18"
solana-transaction-status = "1.18"
base64 = "0.21"
bincode = "1"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
